k8s-netbox/netbox-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  annotations:
    kubernetes.io/ingress.class: traefik
    #cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    kubernetes.io/ingress.allow-http: "false"
    cert-manager.io/issuer: "cert-issuer-netbox"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ipam.schramm-mainz.de
    secretName: certmanager-ipam.schramm-mainz.de
  rules:
    - host: ipam.schramm-mainz.de
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: netbox
              port:
                number: 80
